Bug 138675 - Crash in LO Base in MS Windows when creating auto-number using a variety of number types
Summary: Crash in LO Base in MS Windows when creating auto-number using a variety of n...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.1 rc
Hardware: All Windows (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-12-05 15:17 UTC by xordevoreaux
Modified: 2021-01-18 14:50 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
screen cap (11.18 KB, image/png)
2020-12-20 21:26 UTC, xordevoreaux
Details
Bibisect log (2.90 KB, text/plain)
2021-01-06 19:04 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description xordevoreaux 2020-12-05 15:17:21 UTC
Description:
LibreOffice crashes when attempting to create an auto-id of type BigInt in LibreOffice.  The database file cannot be launched again after the crash, resulting in LO repeating attempting (and failing) to launch. 

LO is left in memory, meaning the file cannot be deleted, but there's no entry in Task Manager to kill. Hard reboot required.

Steps to Reproduce:
1. Launch LO
2. Select Base Database, bringing up the Database Wizard
3. Select Create a new Database (HSQLDB is the only option)
4. Hit Next.
5. Leave all defaults on the "Decide How to Proceed" wizard page
6. Hit Next, bringing up the Save As dialog box
7. Name the database and click Save, bringing up the tasks window in Base
8. Click Create Table In Design View, bring up a new table design grid
9. Under Field Name, type AutoID
10 Under Field Type, select BigInt[BIGINT]
11.Under Field properties at the bottom of the window, set AutoValue to Yes
12. Click to the next row in the database table



Actual Results:
LibreOffice will immediately freeze or crash. If it freezes, you'll get a Windows spinning timer and be forced to close LO manually via task manager.

Expected Results:
Should do one of the following:

1. Allow the user to continue to the next row and continue working
2. Warn the user not to select BigInt as an autovalue type (and prevent it)
3. Fail more gracefully than it did here.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 561e5559bb68242c7f785f0ca3bee3eb12b58963
CPU threads: 8; OS: Windows 10.0 Build 20270; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 xordevoreaux 2020-12-05 15:24:37 UTC
Also failed exactly the same way when attempting to set the autovalue property to Yes for:
Number [NUMERIC]
Integer [INTEGER]

I gave up at that point to know what other type to set for an auto value.
Comment 2 Julien Nabet 2020-12-06 08:48:16 UTC Comment hidden (obsolete)
Comment 3 xordevoreaux 2020-12-06 09:50:00 UTC
(In reply to Julien Nabet from comment #2)
> On pc Debian x86-64 with master sources updated today, I don't reproduce
> this.
> (Windows only bug?)
> 
> Could you indicate what Java version do you have? (vendor, JRE or JDK, 32 or
> 64 bits)
> Could you also give a try at
> https://wiki.documentfoundation.org/QA/FirstSteps ?

Often times when I clearly indicate that I find a bug in Windows, someone comes along and says that they cannot reproduce the bug in Linux. This is typical. Many of the bugs I come across, especially in Draw, are Windows-specific, and I must ask people to test for the reported bug in the environment in which the bug was first identified.

I'm using Java jre1.8.0_271 64-bit, and I checked for updates, there were none.
Comment 4 xordevoreaux 2020-12-06 11:13:58 UTC Comment hidden (obsolete)
Comment 5 xordevoreaux 2020-12-07 19:40:19 UTC Comment hidden (obsolete)
Comment 6 xordevoreaux 2020-12-17 20:26:53 UTC Comment hidden (obsolete)
Comment 7 Robert Großkopf 2020-12-18 19:20:21 UTC Comment hidden (obsolete)
Comment 8 xordevoreaux 2020-12-19 18:05:13 UTC Comment hidden (obsolete)
Comment 9 xordevoreaux 2020-12-19 18:08:15 UTC Comment hidden (obsolete)
Comment 10 Robert Großkopf 2020-12-19 18:38:09 UTC Comment hidden (obsolete)
Comment 11 xordevoreaux 2020-12-19 19:31:19 UTC Comment hidden (obsolete)
Comment 12 xordevoreaux 2020-12-19 19:34:09 UTC Comment hidden (obsolete)
Comment 13 xordevoreaux 2020-12-20 12:33:27 UTC Comment hidden (obsolete)
Comment 14 xordevoreaux 2020-12-20 21:26:19 UTC Comment hidden (obsolete)
Comment 15 Alex Thurgood 2020-12-21 09:10:28 UTC Comment hidden (obsolete)
Comment 16 xordevoreaux 2020-12-21 09:53:34 UTC Comment hidden (obsolete)
Comment 17 xordevoreaux 2020-12-24 15:59:31 UTC Comment hidden (obsolete)
Comment 18 xordevoreaux 2021-01-06 09:54:33 UTC
still happening in 

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 8e691505d4675b878b30bd00cd2e4fb4f794f0ef
CPU threads: 8; OS: Windows 10.0 Build 21277; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 19 Telesto 2021-01-06 18:38:20 UTC
Confirm
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 4e3ce9dd6ace0b22f7b3f45cf2338b201f4dc305
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 20 Telesto 2021-01-06 18:44:30 UTC
Still fine with
Version: 7.0.0.0.beta1+ (x64)
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 21 Telesto 2021-01-06 19:04:05 UTC
Created attachment 168724 [details]
Bibisect log

Bisected to:
author	Caolán McNamara <caolanm@redhat.com>	2020-08-28 10:29:55 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-08-28 20:15:45 +0200
commit 3fc63a7463149685b04c676968a82bc00a48a9af (patch)
tree 730a8219e3617b3fd6773dab0a961265945cf9b7
parent bde1637b30570ee82fd8f3f72d1f6f4012914fc0 (diff)
weld OTableBorderWindow

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3fc63a7463149685b04c676968a82bc00a48a9af
Comment 22 Telesto 2021-01-06 19:04:39 UTC
Adding CC: to Caolán McNamara
Comment 23 Commit Notification 2021-01-14 09:11:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef597c30f60d83545c249e3cf02feeca1c9c8a8a

Resolves: tdf#138675 crash on checking if focus is in OFieldDescControl

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Caolán McNamara 2021-01-14 09:12:56 UTC
fixed in master, backport to 7-1 in gerrit
Comment 25 Commit Notification 2021-01-14 10:44:13 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/c2ea190a0ef9a9eb4f66ea6b708f9a1735d5e0c4

Resolves: tdf#138675 crash on checking if focus is in OFieldDescControl

It will be available in 7.1.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 xordevoreaux 2021-01-14 15:03:22 UTC
Initially, adding a row with an auto-id, and then clicking the next row worked.
Then I went to the help menu at the top to get the information to paste here about the version, and it crashed, leaving instances in memory (seen via Task Manager).




After recovering:
Going to the help window first did not produce a crash.
Selecting the 2nd row after creating an auto number field, no crash.
Selecting the 3rd row after selecting the 2nd row, crash.



Version: 7.2.0.0.alpha0+ (x64)
Build ID: 94f6765d6ecc3145fa2d266231124003cf953118
CPU threads: 8; OS: Windows 10.0 Build 21286; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 27 Xisco Faulí 2021-01-14 15:08:47 UTC
(In reply to mwtjunkmail from comment #26)
> Initially, adding a row with an auto-id, and then clicking the next row
> worked.
> Then I went to the help menu at the top to get the information to paste here
> about the version, and it crashed, leaving instances in memory (seen via
> Task Manager).
> 
> 
> 
> 
> After recovering:
> Going to the help window first did not produce a crash.
> Selecting the 2nd row after creating an auto number field, no crash.
> Selecting the 3rd row after selecting the 2nd row, crash.
> 
> 
> 
> Version: 7.2.0.0.alpha0+ (x64)
> Build ID: 94f6765d6ecc3145fa2d266231124003cf953118
> CPU threads: 8; OS: Windows 10.0 Build 21286; UI render: Skia/Vulkan; VCL:
> win
> Locale: en-US (en_US); UI: en-US
> Calc: CL

Your build doesn't contain the fix.
Please, try with a more recent build from https://dev-builds.libreoffice.org/daily/master/current.html
Comment 28 xordevoreaux 2021-01-14 15:11:11 UTC
I just grab the current daily build, which was marked the 14th. I've never played with a master copy but I'll see.
Comment 29 xordevoreaux 2021-01-14 15:12:46 UTC
What you directed me to is exactly the build I tested on just now.

2021-01-14 12:15:52
Comment 31 xordevoreaux 2021-01-14 15:54:34 UTC
(In reply to himajin100000 from comment #30)
> (In reply to mwtjunkmail from comment #29)
> > What you directed me to is exactly the build I tested on just now.
> > 
> > 2021-01-14 12:15:52
> 
> https://ci.libreoffice.org/job/lo_daily_tb_win/
> https://ci.libreoffice.org/job/lo_daily_tb_win/486/
> https://gerrit.libreoffice.org/q/status:merged+branch:master+project:core,25
> https://gerrit.libreoffice.org/q/status:merged+branch:master+project:core

My apologizes, but as an end user who is trying to help you guys out by reporting bugs the best I know how, the above means zero to me. I looked at the tb_win/ link changes, didn't see anything I recognized as having to do with Base, but that doesn't mean it's not listed.  If you're trying to make a point, please speak End User.
Comment 32 Telesto 2021-01-14 16:46:48 UTC
(In reply to mwtjunkmail from comment #31)
The commit got pushed today. The buildbot produces or packages master build installer once a day (normally at night). So fix here will appear in build of the 15th

Xisco/Buovjaga building themselves. So can confirm something fixed earlier in the process. People relying on builtbot have to wait a day.. And sometimes longer (if the builtbot producing master got stuck somehow). But that is easy to notice. If you're still downloading the 14-01 release on 15th (except if you're really early in the morning)
Comment 33 xordevoreaux 2021-01-18 14:50:00 UTC
(In reply to Commit Notification from comment #25)
> Caolán McNamara committed a patch related to this issue.
> It has been pushed to "libreoffice-7-1":
> 
> https://git.libreoffice.org/core/commit/
> c2ea190a0ef9a9eb4f66ea6b708f9a1735d5e0c4
> 
> Resolves: tdf#138675 crash on checking if focus is in OFieldDescControl
> 
> It will be available in 7.1.0.2.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Works for me in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1a167625314bf36b735176ed488e6ba9b5e9b675
CPU threads: 8; OS: Windows 10.0 Build 21292; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL