Resolves: tdf#138675 crash on checking if focus is in OFieldDescControl

use has_child_focus instead, which didn't exist at the time of...

commit 3fc63a7463149685b04c676968a82bc00a48a9af
Date:   Fri Aug 28 10:29:55 2020 +0100

    weld OTableBorderWindow

and so sidestep that m_pActFocusWindow has always fallen out of sync
when OFieldDescControl clears its contents

Change-Id: I274131c314a00bdfec2e877a2baa3758d45c325f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109237
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>